Plugin Name: Protected Content
Author: Fabio Jun, Rheinard Khorf, Philipp Stracker

Change Log:
----------------------------------------------------------------------

1.1.0.6
----------------------------------------------------------------------

1.1.0.5
----------------------------------------------------------------------
- Add plugin modifiers (details in Protected Content > Help > Advanced)
- Fix import process to not send out emails
- Fix the IPN URL displayed in the PayPal-Standard settings
- Restore Payment Gateway settings if lost during 1.0 to 1.1 update

1.1.0.4
----------------------------------------------------------------------
- Fix problems in upgrade logic of dripped memberships from 1.0 to 1.1
- Category Protection is not deactivated by "Individual Posts" Add-on

1.1.0.3
----------------------------------------------------------------------
- Write an update log that logs any changes made to the DB
- Improve the Member-Details popup with infos on subscription/payments

1.1.0.2
----------------------------------------------------------------------
- Fix Add-ons "Individual Custom Posts" and "Individual Posts"
- Create a DB snapshot before upgrading

1.1.0.1
----------------------------------------------------------------------
- Fix problem where Protection-Shortcode was not working in 1.1
- Fix a PHP warning that happened during upgrade to 1.1
- Fix glitch in Add-ons page where some settings were disabled

1.1
----------------------------------------------------------------------
- Improved and much simpler UI!
- Better and shorter Setup wizard!
- Membership types dropped: Tiered, Content-Type (converted to Standard)
- New Import Tool to create export files and import data
- New Import-From-Memberships interface
- New Add-on: Admin Side Protection
- New Add-on: Member Capabilities
- New Add-on: User-Role Memberships
- New Add-on: Taxamo (addresses EU VAT regulations)
- New layout of the Add-on page