@@ -56,9 +56,6 @@ class MS_Model_Transient extends MS_Model {
 
 		$fields = get_object_vars( $this );
 		foreach ( $fields as $field => $val ) {
-			if ( in_array( $field, self::$ignore_fields ) ) {
-				continue;
-			}
 			$settings[ $field ] = $this->$field;
 		}
 
