@@ -6,6 +6,8 @@ Change Log:
 
 1.1.0.6
 ----------------------------------------------------------------------
+- Fix issue with translated version of plugin
+- Fix problems with php versions older than 5.3.0
 
 1.1.0.5
 ----------------------------------------------------------------------
